# GA_Gulya

./: .gitignore  README.md  pyproject.toml  requirements.txt  simple_params.json  theory.ipynb
.cursor/rules/: project-structure-rule.mdc
GA/: generate_generational_params.py  generate_gg_params.py  generate_merged_params.py  generate_simple_params.py  generate_steady_params.py  genetic_algorithm.py  main.py  main_plot_functions.py  main_process_results.py  uniform_mutation.py
GA/encoding/: __init__.py  base.py  binary_encoding.py  gray_encoding.py
GA/examples/: multi_objective.py  single_objective.py
GA/extensions/: __init__.py  fitness_function_calculator.py  history_data.py  population_generator.py  stop_criteria.py
GA/fitness_func/: __init__.py  ackley.py  base.py  deb2.py  deb4.py  rastrigin.py
GA/mutation/: uniform_mutation.py
GA/parameters_generation/: generate_generational_params.py  generate_merged_params.py  generate_steady_params.py
GA/parent_selection/: __init__.py  base_exp_rank.py  base_lin_rank.py  base_selection.py  elite.py
GA/parent_selection/rws/: __init__.py  exp_rank_rws.py  lin_rank_rws.py  rws.py
GA/parent_selection/sus/: exp_rank_sus.py  lin_rank_sus.py  sus.py
GA/parent_selection/tournament/: tournament_base.py  tournament_with_partial_return.py  tournament_with_return.py
GA/selection/: base_exp_rank.py  base_lin_rank.py  base_selection.py  base_with_probabilities.py
GA/selection/rws/: __init__.py  exp_rank_rws.py  lin_rank_rws.py  rws.py
GA/selection/sus/: __init__.py  exp_rank_sus.py  lin_rank_sus.py  sus.py
GA/selection/tournament/: __init__.py  tournament_base.py  tournament_with_partial_return.py  (+2 more)
GA/steady_state_selection/: __init__.py  base_selection.py  random_comma_selection.py  random_plus_selection.py  worst_comma_selection.py  worst_plus_selection.py
tests/: __init__.py  conftest.py  gg_params.json  requirements.txt  test_binary_encoding.py  test_gray_encoding.py
